--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-<h1>Wellcome!</h1>
+<!DOCTYPE html>
+<head>
+  <meta name="viewport" content="width-device-width, initial-scale=1.0">
+  <link rel="icon" href="/i.svg">
+  <link rel="stylesheet" href="i.css">
+  <script type="text/javascript" src="/jq.js"></script>
+  <script type="text/javascritp" src="/i.js"></script>
+</head>
+<body>
+  <div id="background"></div>
+  <div id="SVGContainer">
+    <svg id="Front" viewBox="0 0 1000 1000">
+      <rect fill="blue" width="1000" height="1000"></rect>
+    </svg>
+  </div>
+  
+</body>
