--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <link rel="icon" href="/i.svg">
   <link rel="stylesheet" href="i.css">
   <script type="text/javascript" src="/jq.js"></script>
-  <script type="text/javascritp" src="/i.js"></script>
+  <script type="text/javascript" src="/i.js"></script>
 </head>
 <body>
   <div id="background"></div>
